色と文章を変更しました。”

--- a/bar/index.html
+++ b/bar/index.html
@@ -13,7 +13,7 @@
 </script>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>STAYGUIDE|ホテル運用の外国人対応コストを削減</title>
+    <title>STAYGUIDE|バーの外国人対応、もっと効率的に。</title>
     <meta name="description" content="STAYGUIDEは、AIによる自然な多言語翻訳で、ホテル・ゲストハウス運営の外国人対応コストを削減するサービスです。簡単操作・低価格で、ゲストとスタッフ双方にストレスのない滞在体験をサポートします。">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -111,12 +111,13 @@
                     <div class="home_screen_slide_main">
                         <div class="home_text_slide">
                             <div class="item">
-                                <h1>外国人対応が負担に<br />なっていませんか？</h1>
+                                <h1>外国人のお客様への対応、<br />負担になっていませんか？</h1>
                                 <div class="space-10"></div>
-                                <p>多言語対応はホテル運営の大きな課題。
-スタッフの負担が増え、対応に時間を割かれてしまうことも…。
-限られたリソースで、ゲストに満足してもらえるサービスを提供するにはどうしたらいいのか？
-そんな悩みを解決するために、STAYGUIDEが生まれました。 </p>
+                                <p>海外からのお客様が増える中、バーでも外国人対応が必須になっています。
+                                    しかし、言葉が通じずに接客がスムーズにいかない…そんな場面、ありませんか？
+                                    スタッフの負担が増えたり、オーダーや説明に手間取ることも。
+                                    限られた人数・時間の中で、どうやって満足度の高いサービスを提供するか。
+                                    その課題を解決するために生まれたのが、STAYGUIDEです。</p>
                                 <div class="space-50"></div>
                                 
                             </div>
@@ -132,11 +133,12 @@
                                
                             </div>
                             <div class="item">
-                                <h1>負担が減れば、 <br />サービスはもっと豊かになる。</h1>
+                                <h1>負担が減ると、 <br />サービスはもっと豊かになる。</h1>
                                 <div class="space-10"></div>
                                 <p>外国人ゲストへの対応に追われる日々から解放され、
 スタッフは本来注力すべき業務に集中できるように。
-ゲストは誤解のない案内で快適に滞在を楽しみ、ホテルの信頼度も向上します。
+ゲストは言葉の壁を感じることなく、スムーズにメニューやサービスを楽しみ、
+バーの信頼度も自然と向上します。
 STAYGUIDEがもたらすのは、運営の効率化だけでなく、
 ゲストもスタッフも笑顔になる新しい運営スタイルです。 </p>
                                 <div class="space-50"></div>
@@ -389,8 +391,8 @@ STAYGUIDEがもたらすのは、運営の効率化だけでなく、
                                 </div>
                             </div>
                             <div class="media-body">
-                                <h5>リモコンの多言語マニュアル作成</h5>
-                                <p>写真を撮るだけで、外国人が戸惑いやすいリモコンや各種機器の説明書を多言語で自動生成。</p>
+                                <h5>メニューを多言語で自動生成</h5>
+                                <p>写真を撮るだけで、外国人が迷わずに注文できます。多言語対応でバーの接客コストを削減しましょう。</p>
                             </div>
                         </div>
                     </a>
@@ -403,8 +405,8 @@ STAYGUIDEがもたらすのは、運営の効率化だけでなく、
                                 </div>
                             </div>
                             <div class="media-body">
-                                <h5>滞在中の安心感を提供</h5>
-                                <p>滞在中に使うマニュアルが馴染みやすい言葉で書かれることで、ゲストは安心して施設やサービスを利用可能。</p>
+                                <h5>お通し・席料の誤解を防止</h5>
+                                <p>多言語対応で、外国人との行き違いを未然に防止し、安心・スムーズな接客をサポートします。</p>
                             </div>
                         </div>
                     </a>
@@ -435,7 +437,7 @@ STAYGUIDEがもたらすのは、運営の効率化だけでなく、
             <div class="row wow fadeInUp">
                 <div class="col-xs-12 col-md-6 col-md-offset-3 text-center">
                     <h3 class="text-uppercase">サービスの画面例</h3>
-                    <p>ホテルやゲストハウスだけでなく、観光施設や飲食店など、多言語対応が求められるあらゆる場面で活用可能。操作ガイドやメニュー説明、イベント案内など、多彩なシーンでゲストにわかりやすい情報を提供します。</p>
+                    <p>バーや飲食店だけでなく、観光施設や飲食店など、多言語対応が求められるあらゆる場面で活用可能。メニューの説明やドリンクのオーダー方法、特別イベントの案内など、多彩なシーンでゲストにわかりやすい情報を提供します。</p>
                 </div>
             </div>
             <div class="space-60"></div>
@@ -587,19 +589,18 @@ STAYGUIDEがもたらすのは、運営の効率化だけでなく、
                         <div class="client-details-content">
                             <div class="client_details">
                                 <div class="item">
-                                    <h3>ゲストハウス<span style="font-size: 50%;">（テストマーケティング中）</span></h3>
-                                    <p>宿泊中の質問がほぼゼロに！</p>
-                                    <q>以前は「エアコンが動かない」「どこにゴミを出せばいいか」などの質問が毎日のようにありましたが、StayGuideを導入してからは滞在中の問い合わせがほとんどなくなりました。</q>
+                                    <h3>飲食店<span style="font-size: 50%;">（テストマーケティング中）</span></h3>
+                                    <p>メニュー説明がスムーズになり、オーダー時のトラブルが減少</p>
+                                    <q>外国からのお客様にメニューを説明する際に、言葉の壁を感じていましたが、STAYGUIDEを導入してから、事前に多言語でメニューを案内できるようになり、オーダー時の誤解やトラブルが減りました。お客様は、自分の言語でメニュー内容を確認できるため、よりスムーズに注文ができ、スタッフも安心して対応できるようになりました。</div>
+                                <div class="item">
+                                    <h3>カフェ<span style="font-size: 50%;">（テストマーケティング中）</span></h3>
+                                    <p>ドリンクやサービスの説明が簡単に多言語対応</p>
+                                    <q>カフェでの接客時に、外国のお客様から『このドリンクはどういう意味ですか？』と聞かれることが多かったのですが、STAYGUIDEを導入してからは、メニューやサービスを多言語で表示できるため、事前に説明ができ、わかりやすくなりました。これで、スタッフの負担が軽減され、よりスムーズに接客できています。</q>
                                 </div>
                                 <div class="item">
-                                    <h3>民宿<span style="font-size: 50%;">（テストマーケティング中）</span></h3>
-                                    <p>滞在中もスムーズに過ごしてもらえる安心感</p>
-                                    <q>チェックイン後、部屋での操作や設備の使い方をうまく説明できていないのが不安でした。今は多言語でガイドできるので、ゲストも私もストレスが減りました。</q>
-                                </div>
-                                <div class="item">
-                                    <h3>民泊<span style="font-size: 50%;">（テストマーケティング中）</span></h3>
-                                    <p>「まるで母国にいるよう」と言われた！</p>
-                                    <q>外国からのゲストが多く、言語の壁に悩んでいましたが、StayGuideのおかげでゲストが自分の言語で施設の情報を理解できるようになりました。「母国語で案内があるのは安心できる」との声もいただき、ゲストの満足度が向上しました。</q>
+                                    <h3>レストラン<span style="font-size: 50%;">（テストマーケティング中）</span></h3>
+                                    <p>食材やアレルギー情報を多言語で提供</p>
+                                    <q>食材やアレルギー情報の説明に手間取っていましたが、STAYGUIDEを導入したことで、メニューに含まれる食材やアレルギー対応情報を多言語で簡単に案内できるようになりました。お客様にとっても安心できる情報源となり、安心して食事を楽しんでいただけるようになりました。</q>
                                 </div>
                                 <div class="item">
                                     <h3>BAR<span style="font-size: 50%;">（テストマーケティング中）</span></h3>
@@ -610,14 +611,14 @@ STAYGUIDEがもたらすのは、運営の効率化だけでなく、
 お客様も納得したうえでお帰りいただけるので、最後まで気持ちのいい接客ができています。</q>
                                 </div>
                                 <div class="item">
-                                    <h3>グランピング<span style="font-size: 50%;">（テストマーケティング中）</span></h3>
-                                    <p> 「どこに何があるか」がすぐに伝わる</p>
-                                    <q>ハウスルールや近くのコンビニ、ゴミの分別ルールなど、滞在中に必要な情報を一目でわかる形で伝えられるようになりました。紙の案内より圧倒的にわかりやすいです。</q>
+                                    <h3>フードトラック<span style="font-size: 50%;">（テストマーケティング中）</span></h3>
+                                    <p> 行列でもスムーズに注文を受けられるように</p>
+                                    <q>フードトラックで外国からのお客様が多く、注文時に言葉の壁を感じることがありましたが、STAYGUIDEを使うことで、メニューや価格、特別なオーダー方法を多言語で案内できるようになりました。これにより、行列でもスムーズに注文を受けることができ、お客様もスピーディに対応してもらえたと感じ、満足度が向上しました。</q>
                                 </div>
                                 <div class="item">
-                                    <h3>旅館<span style="font-size: 50%;">（テストマーケティング中）</span></h3>
-                                    <p>運営が効率化し、時間に余裕ができました！</p>
-                                    <q>これまでは、ゲストごとに個別の対応が必要でしたが、StayGuideの導入により、共通のマニュアルを提供できるようになりました。その結果、運営が効率化し、他の業務に時間を割くことができるようになりました。</q>
+                                    <h3>居酒屋<span style="font-size: 50%;">（テストマーケティング中）</span></h3>
+                                    <p>外国のお客様が気軽に「日本らしさ」を体験できる</p>
+                                    <q>居酒屋で日本の文化やマナーを説明するのは意外と難しいですが、STAYGUIDEを導入してから、外国のお客様に日本酒の楽しみ方や、お箸の使い方、乾杯の仕方など、日本文化に関する簡単なガイドを多言語で提供できるようになりました。これにより、お客様は日本の伝統的な文化を気軽に学ぶことができ、居酒屋での体験がより深く、豊かなものに。日本の文化を理解することで、より楽しんでいただけ、外国のお客様にも日本らしさを感じてもらえています。</q>
                                 </div>
                             </div>
                         </div>
@@ -788,19 +789,18 @@ STAYGUIDEがもたらすのは、運営の効率化だけでなく、
                         </div>
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapse3">リモコンの使い方もマニュアルにできますか？</a></h4>
+                                <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapse3">お通し・席料や、飲み方のマナー等もマニュアルにできますか？</a></h4>
                             </div>
                             <div id="collapse3" class="panel-collapse collapse">
                                 <div class="panel-body">はい、できます。
-テレビ・エアコン・給湯器などのリモコンをスマホで撮影するだけで、
-StayGuideがボタンを自動で認識し、多言語での操作マニュアルを作成します。
-外国人のお客様にも直感的に操作方法が伝わるため、説明の手間が省け、トラブルも減ります。</div>
+席料やお通しの仕組み、日本ならではの飲み方のマナー（例：一人一杯の注文が基本、飲み放題のルール、チップ不要など）も、外国人のお客様にわかりやすく伝わるように多言語マニュアルとして自動生成できます。
+写真を撮るだけで、その場でスマホに適切な言語で表示されるので、スタッフが一から説明する必要がなくなり、トラブルや誤解の防止につながります。</div>
                             </div>
                         </div>
 
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapse4">宿泊者にどうやって案内を見てもらうの？</a></h4>
+                                <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapse4">来店客にどうやって案内を見てもらうの？</a></h4>
                             </div>
                             <div id="collapse4" class="panel-collapse collapse">
                                 <div class="panel-body">StayGuideの管理画面から、各マニュアルに対応したQRコードを自動生成・ダウンロードできます。プリントアウトしてお部屋に設置したり、予約メールに添付することも可能です。</div>
